fixed padding on mobile hero section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,6 +62,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   margin-bottom: $spacing * 2;
+  padding: 5%;
 
   a {
     font-weight: bold;
